@@ -79,7 +79,37 @@ namespace Exiv2 {
     //! Convert (move) XMP properties to IPTC tags, remove converted XMP properties.
     EXIV2API void moveXmpToIptc(XmpData& xmpData, IptcData& iptcData);
 
-    //! Convert string charset with iconv.
+    /*!
+      @brief Convert character encoding of \em str from \em from to \em to.
+             The string is modified and its size may change.
+
+      This function uses the iconv library, if Exiv2 was compiled with iconv
+      support.  Otherwise, on Windows, it uses MSVC functions to support a
+      limited number of conversions and issues a warning if an unsupported
+      conversion is attempted. The conversions supported on Windows without
+      iconv are:
+
+      from: UTF-8 to: UCS-2BE<br>
+      from: UTF-8 to: UCS-2LE<br>
+      from: UCS-2BE to: UTF-8<br>
+      from: UCS-2BE to: UCS-2LE<br>
+      from: UCS-2LE to: UTF-8<br>
+      from: UCS-2LE to: UCS-2BE<br>
+      from: ISO-8859-1 to: UTF-8<br>
+      from: ASCII to: UTF-8<br>
+
+      If the function is called but Exiv2 was not compiled with iconv support
+      and can't use Windows MSVC functions, it issues a warning.
+
+      @param str  The string to convert. It is updated to the converted string,
+                  which may have a different size. If the function call fails,
+                  the string may have been modified.
+      @param from Charset in which the input string is encoded as a name
+                  understood by \c iconv_open(3).
+      @param to   Charset to convert the string to as a name
+                  understood by \c iconv_open(3).
+      @return Return \c true if the conversion was successful, else \c false.
+     */
     EXIV2API bool convertStringCharset(std::string& str, const char* from, const char* to);
 
 }                                       // namespace Exiv2
